# Intelligent-Knee-pads

./: .gitignore  IMU_tran.py  README.md  护腿板等选购方案.docx
IMU姿态与位置估计（code）/: README.md
IMU姿态与位置估计（code）/code/: getIMUdata(Base).m  getIMUdata_Base.m
IMU姿态与位置估计（code）/code/位置（卡尔曼算法）/: Kellman_Filter_algorithm.m
IMU姿态与位置估计（code）/code/姿态（四元数算法）/: Rotate_Model.m
IMU姿态与位置估计（code）/code/姿态（四元数算法）/quaternion_library/: quaternProd.m
IMU姿态与位置估计（code）/data/: 2_imu_data.txt  time_beijing1.txt  time_beijing3.txt  ~$1_imu_data.xlsx
calculator/: CMakeLists.txt
calculator/src/: calculator.cpp  calculator.h  main.cpp
imu_pose_project/: CMakeLists.txt  test_data.txt
imu_pose_project/include/: imu_data.h  kalman_filter.h  pose_estimation.h  serial_interface.h
imu_pose_project/src/: kalman_filter.cpp  main.cpp  pose_estimation.cpp  serial_interface.cpp
plans/: ~$板等选购方案.docx  护腿板、传感器、芯片、电池、板子.docx  智能护腿板问卷统计.docx
石师姐代码/code/: getIMU.m
石师姐代码/code/quaternion_library/: TestScript.m  pMatrixq.m  qMatrix.m
石师姐代码/code/visual_test/: visualized_cube_rotate_model.m
石师姐代码/data/data/: 2_imu_data.xlsx  3_imu_data.xlsx  time_beijing2.txt
石师姐学习资料/quaternion-master/quaternion-master/demo/slerp_cube/: slerp_cube.m
石师姐学习资料/quaternion-master/quaternion-master/demo/squad_vs_bezier/: squad_vs_bezier.m
